[package]
name = "liquid_breakout_backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
mongodb = "2.7.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.3.30"
serde_repr = "0.1.18"
rbx_types = { version = "1.8.0", features = ["serde"] }
rbx_binary = { version = "0.7.4", features = ["serde"] }
full_moon = { version = "0.19.0", features = ["serde", "roblox"]}
rbx_dom_weak = "2.7.0"
reqwest = { version = "0.11.24", features = ["json"]}
surf = "2.3.2"
